--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "framer-motion": "^10.16.16",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.21.1",
+    "sort-by": "^1.2.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "taos": "^1.0.5"
   },
